--- a/PortalDoFranqueadoGUI/MainResource.xaml
+++ b/PortalDoFranqueadoGUI/MainResource.xaml
@@ -6,6 +6,7 @@
     <util:EnumConverter x:Key="EnumConverter"/>
     <util:PurchaseItemGroupDescriptionConverter x:Key="PurchaseItemGroupDescriptionConverter"/>
     <util:ExpandableConverter x:Key="ExpandableConverter"/>
+    <util:ReverseBooleanConverter x:Key="ReverseBooleanConverter"/>
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Style.xaml"/>
     </ResourceDictionary.MergedDictionaries>
