--- a/PortalDoFranqueadoGUI/View/FranchiseePurchaseStore.xaml
+++ b/PortalDoFranqueadoGUI/View/FranchiseePurchaseStore.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.CollectionPurchase"
+﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.FranchiseePurchaseStore"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,11 +8,15 @@
              xmlns:util="clr-namespace:PortalDoFranqueadoGUI.Util"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:PortalDoFranqueadoGUI.View"
-             d:DataContext="{d:DesignInstance Type=viewmodel:CollectionPurchaseViewModel}"
+             d:DataContext="{d:DesignInstance Type=viewmodel:FranchiseePurchaseStoreViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White"
              Cursor="{Binding CurrentCursor}">
+    <UserControl.InputBindings>
+        <KeyBinding Gesture="Shift+Tab" Command="{Binding GoToPreviusFieldCommand}"/>
+        <KeyBinding Gesture="Tab" Command="{Binding GoToNextFieldCommand}"/>
+    </UserControl.InputBindings>
     <Grid>
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="Loaded">
@@ -25,8 +29,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0"
-               Content="VISUALIZAR COMPRA"
-               FontWeight="Bold"/>
+               Content="PERÍODO DE COMPRA ABERTO"
+               FontWeight="Bold" IsTabStop="False"/>
         <Grid Grid.Row="1"
               Margin="0,0,5,5">
             <Grid.RowDefinitions>
@@ -35,41 +39,91 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="140"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" Grid.ColumnSpan="5"
+            <Border Grid.Column="0" Grid.ColumnSpan="3"
                     Grid.Row="0" Grid.RowSpan="2"
                     Style="{StaticResource DefaultBlackBorder}"
-                    Width="470"/>
+                    Width="145"/>
+            <TextBlock Grid.Row="0" Grid.Column="1" 
+                       Text="Selecione uma loja para fazer a compra" 
+                       TextWrapping="Wrap"
+                       Foreground="White"
+                       FontSize="10"
+                       Visibility="{Binding VisibilityComboBoxStore}"/>
+            <ComboBox Grid.Row="1" Grid.Column="1"
+                      DisplayMemberPath="Name"
+                      SelectedValue="{Binding Store}"
+                      Margin="0,5"
+                      Cursor="Arrow"
+                      Visibility="{Binding VisibilityComboBoxStore}"
+                      ItemsSource="{Binding Stores, Source={StaticResource Cache}}" IsTabStop="True"/>
             <TextBlock Grid.Row="0" Grid.RowSpan="2"
                        Grid.Column="1"
                        Text="{Binding Store.Name}"
-                       Style="{StaticResource TextBlockSubTitle}"
-                       Foreground="White"/>
-            <Label Grid.Row="0" Grid.Column="2" Content="Total" Style="{StaticResource LabelTituloCampo}"/>
-            <TextBlock Grid.Row="1" Grid.Column="2" 
+                       Visibility="{Binding VisibilityTextBlockStore}"
+                       Style="{StaticResource TextBlockSubTitle}"/>
+            <Border Grid.Column="3" Grid.ColumnSpan="6"
+                    Grid.Row="0" Grid.RowSpan="2"
+                    Style="{StaticResource DefaultBlackBorder}"
+                    Width="440"/>
+            <Label Grid.Row="0" Grid.Column="4" Content="Início" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
+            <Label Grid.Row="0" Grid.Column="5" Content="Fim" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
+            <Label Grid.Row="0" Grid.Column="6" Content="Situação" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
+            <Label Grid.Row="0" Grid.Column="7" Content="Valor total" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
+            <TextBlock Grid.Row="1" Grid.Column="4" 
+                       Text="{Binding Collection.StartDate, StringFormat='dd/MM/yyyy'}"
+                       Margin="5"
+                       Foreground="White"
+                       Width="100"/>
+            <TextBlock Grid.Row="1" Grid.Column="5" 
+                       Text="{Binding Collection.EndDate, StringFormat='dd/MM/yyyy'}"
+                       Margin="5"
+                       Foreground="White"
+                       Width="100"/>
+            <TextBlock Grid.Row="1" Grid.Column="6" 
+                       Text="{Binding Status, Converter={StaticResource EnumConverter}}"
+                       Margin="5"
+                       Foreground="White"
+                       Width="100"/>
+            <TextBlock Grid.Row="1" Grid.Column="7" 
                        Text="{Binding Amount, StringFormat=C, ConverterCulture=pt-BR}"
                        Margin="5"
                        Foreground="White"
-                       Width="80"/>
-            <Label Grid.Row="0" Grid.Column="3" Content="Situação" Style="{StaticResource LabelTituloCampo}"/>
-            <TextBlock Grid.Row="1" Grid.Column="3" 
-                       Text="{Binding Purchase.Status, Converter={StaticResource EnumConverter}}"
-                       Margin="5"
-                       Foreground="White"
-                       Width="80"/>
+                       Width="100"/>
+            <Button Grid.Row="0" Grid.RowSpan="2"
+                    Grid.Column="9"
+                    Content="Salvar"
+                    Style="{StaticResource DefaultButtonFull}"
+                    Command="{Binding SaveCommand}"
+                    Visibility="{Binding VisibilityButtonSave}" IsTabStop="False"/>
+            <Button Grid.Row="0" Grid.RowSpan="2"
+                    Grid.Column="10"
+                    Width="78"
+                    Style="{StaticResource DefaultButtonFull}"
+                    Command="{Binding SaveAndCloseCommand}"
+                    Visibility="{Binding VisibilityButtonSave}" IsTabStop="False">
+                <TextBlock Text="Fechar compra" TextWrapping="Wrap"/>
+            </Button>
         </Grid>
         <ListView Grid.Row="2"
                   ItemsSource="{Binding Products}"
                   SelectionMode="Single"
-                  Width="985"
+                  Width="895"
                   HorizontalAlignment="Left"
                   Style="{StaticResource ListViewUnfocusable}"
-                  IsEnabled="{Binding EnabledContent}">
+                  IsEnabled="{Binding EnabledContent}"
+                  Name="lvPurchase" IsTabStop="True">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Foto" Width="100">
@@ -79,7 +133,7 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Família" Width="80">
+                    <GridViewColumn Header="Familia" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Product.Family.Name}"
@@ -90,24 +144,12 @@
                     <GridViewColumn Header="Preço" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <DockPanel>
-                                    <TextBlock Text="{Binding Product.Price, StringFormat='C', ConverterCulture=pt-BR}"
+                                <TextBlock Text="{Binding Product.Price, StringFormat='C', ConverterCulture=pt-BR}"
                                             Style="{StaticResource TextBlockCellNumber}"/>
-                                </DockPanel>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Total" Width="90">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <DockPanel>
-                                    <TextBlock Text="{Binding Amount, StringFormat='C', ConverterCulture=pt-BR}"
-                                            Style="{StaticResource TextBlockCellNumber}"/>
-                                </DockPanel>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Width="625">
+                    <GridViewColumn Width="Auto">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <ListView ItemsSource="{Binding Items}"
@@ -125,15 +167,30 @@
                                                 <Label Content="{Binding Value.Size}"
                                                        Style="{StaticResource LabelCell}"
                                                        HorizontalContentAlignment="Right"
-                                                       Width="42"/>
+                                                       Width="42" IsTabStop="False"/>
                                                 <Label Content=":"
                                                        Style="{StaticResource LabelCell}"
                                                        HorizontalContentAlignment="Right"
-                                                       Margin="-8,-1,0,0"/>
+                                                       Margin="-8,-1,0,0" IsTabStop="False"/>
+                                                <TextBox Text="{Binding Value.Quantity}"
+                                                         IsTabStop="True"
+                                                         Width="30"
+                                                         util:FocusExtension.IsFocused="{Binding IsFocused}"
+                                                         Visibility="{Binding Value.VisibilityTextBoxQuantity}">
+                                                    <i:Interaction.Triggers>
+                                                        <i:EventTrigger EventName="GotFocus">
+                                                            <i:InvokeCommandAction Command="{Binding OnGotFocus}"/>
+                                                        </i:EventTrigger>
+                                                        <i:EventTrigger EventName="LostFocus">
+                                                            <i:InvokeCommandAction Command="{Binding OnLostFocus}"/>
+                                                        </i:EventTrigger>
+                                                    </i:Interaction.Triggers>
+                                                </TextBox>
                                                 <Label Content="{Binding Value.Quantity}"
                                                        Width="30"
+                                                       Visibility="{Binding Value.VisibilityTextBlockQuantity}"
                                                        BorderBrush="Gray"
-                                                       BorderThickness="1"/>
+                                                       BorderThickness="1" IsTabStop="False"/>
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
@@ -150,7 +207,7 @@
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate>
-                                        <Expander IsExpanded="False" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom">
+                                        <Expander IsExpanded="{Binding Items[0].IsExpanded}" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom">
                                             <!-- Header Panel of the Expander control -->
                                             <Expander.Header>
                                                 <StackPanel Orientation="Horizontal">
