--- a/PortalDoFranqueadoGUI/View/ManagerCollectionPurchase.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerCollectionPurchase.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.PurchaseStore"
+﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.ManagerCollectionPurchase"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,15 +8,11 @@
              xmlns:util="clr-namespace:PortalDoFranqueadoGUI.Util"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:PortalDoFranqueadoGUI.View"
-             d:DataContext="{d:DesignInstance Type=viewmodel:PurchaseStoreViewModel}"
+             d:DataContext="{d:DesignInstance Type=viewmodel:ManagerCollectionPurchaseViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White"
              Cursor="{Binding CurrentCursor}">
-    <UserControl.InputBindings>
-        <KeyBinding Gesture="Shift+Tab" Command="{Binding GoToPreviusFieldCommand}"/>
-        <KeyBinding Gesture="Tab" Command="{Binding GoToNextFieldCommand}"/>
-    </UserControl.InputBindings>
     <Grid>
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="Loaded">
@@ -29,8 +25,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0"
-               Content="PERÍODO DE COMPRA ABERTO"
-               FontWeight="Bold" IsTabStop="False"/>
+               Content="VISUALIZAR COMPRA"
+               FontWeight="Bold"/>
         <Grid Grid.Row="1"
               Margin="0,0,5,5">
             <Grid.RowDefinitions>
@@ -39,91 +35,41 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="140"/>
-                <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="300"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" Grid.ColumnSpan="3"
+            <Border Grid.Column="0" Grid.ColumnSpan="5"
                     Grid.Row="0" Grid.RowSpan="2"
                     Style="{StaticResource DefaultBlackBorder}"
-                    Width="145"/>
-            <TextBlock Grid.Row="0" Grid.Column="1" 
-                       Text="Selecione uma loja para fazer a compra" 
-                       TextWrapping="Wrap"
-                       Foreground="White"
-                       FontSize="10"
-                       Visibility="{Binding VisibilityComboBoxStore}"/>
-            <ComboBox Grid.Row="1" Grid.Column="1"
-                      DisplayMemberPath="Name"
-                      SelectedValue="{Binding Store}"
-                      Margin="0,5"
-                      Cursor="Arrow"
-                      Visibility="{Binding VisibilityComboBoxStore}"
-                      ItemsSource="{Binding Stores, Source={StaticResource Cache}}" IsTabStop="True"/>
+                    Width="470"/>
             <TextBlock Grid.Row="0" Grid.RowSpan="2"
                        Grid.Column="1"
                        Text="{Binding Store.Name}"
-                       Visibility="{Binding VisibilityTextBlockStore}"
-                       Style="{StaticResource TextBlockSubTitle}"/>
-            <Border Grid.Column="3" Grid.ColumnSpan="6"
-                    Grid.Row="0" Grid.RowSpan="2"
-                    Style="{StaticResource DefaultBlackBorder}"
-                    Width="440"/>
-            <Label Grid.Row="0" Grid.Column="4" Content="Início" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
-            <Label Grid.Row="0" Grid.Column="5" Content="Fim" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
-            <Label Grid.Row="0" Grid.Column="6" Content="Situação" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
-            <Label Grid.Row="0" Grid.Column="7" Content="Valor total" Style="{StaticResource LabelTituloCampo}" IsTabStop="False"/>
-            <TextBlock Grid.Row="1" Grid.Column="4" 
-                       Text="{Binding Collection.StartDate, StringFormat='dd/MM/yyyy'}"
-                       Margin="5"
-                       Foreground="White"
-                       Width="100"/>
-            <TextBlock Grid.Row="1" Grid.Column="5" 
-                       Text="{Binding Collection.EndDate, StringFormat='dd/MM/yyyy'}"
-                       Margin="5"
-                       Foreground="White"
-                       Width="100"/>
-            <TextBlock Grid.Row="1" Grid.Column="6" 
-                       Text="{Binding Status, Converter={StaticResource EnumConverter}}"
-                       Margin="5"
-                       Foreground="White"
-                       Width="100"/>
-            <TextBlock Grid.Row="1" Grid.Column="7" 
+                       Style="{StaticResource TextBlockSubTitle}"
+                       Foreground="White"/>
+            <Label Grid.Row="0" Grid.Column="2" Content="Total" Style="{StaticResource LabelTituloCampo}"/>
+            <TextBlock Grid.Row="1" Grid.Column="2" 
                        Text="{Binding Amount, StringFormat=C, ConverterCulture=pt-BR}"
                        Margin="5"
                        Foreground="White"
-                       Width="100"/>
-            <Button Grid.Row="0" Grid.RowSpan="2"
-                    Grid.Column="9"
-                    Content="Salvar"
-                    Style="{StaticResource DefaultButtonFull}"
-                    Command="{Binding SaveCommand}"
-                    Visibility="{Binding VisibilityButtonSave}" IsTabStop="False"/>
-            <Button Grid.Row="0" Grid.RowSpan="2"
-                    Grid.Column="10"
-                    Width="78"
-                    Style="{StaticResource DefaultButtonFull}"
-                    Command="{Binding SaveAndCloseCommand}"
-                    Visibility="{Binding VisibilityButtonSave}" IsTabStop="False">
-                <TextBlock Text="Fechar compra" TextWrapping="Wrap"/>
-            </Button>
+                       Width="80"/>
+            <Label Grid.Row="0" Grid.Column="3" Content="Situação" Style="{StaticResource LabelTituloCampo}"/>
+            <TextBlock Grid.Row="1" Grid.Column="3" 
+                       Text="{Binding Purchase.Status, Converter={StaticResource EnumConverter}}"
+                       Margin="5"
+                       Foreground="White"
+                       Width="80"/>
         </Grid>
         <ListView Grid.Row="2"
                   ItemsSource="{Binding Products}"
                   SelectionMode="Single"
-                  Width="895"
+                  Width="985"
                   HorizontalAlignment="Left"
                   Style="{StaticResource ListViewUnfocusable}"
-                  IsEnabled="{Binding EnabledContent}"
-                  Name="lvPurchase" IsTabStop="True">
+                  IsEnabled="{Binding EnabledContent}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Foto" Width="100">
@@ -133,7 +79,7 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Familia" Width="80">
+                    <GridViewColumn Header="Família" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Product.Family.Name}"
@@ -144,12 +90,24 @@
                     <GridViewColumn Header="Preço" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Product.Price, StringFormat='C', ConverterCulture=pt-BR}"
+                                <DockPanel>
+                                    <TextBlock Text="{Binding Product.Price, StringFormat='C', ConverterCulture=pt-BR}"
                                             Style="{StaticResource TextBlockCellNumber}"/>
+                                </DockPanel>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="Auto">
+                    <GridViewColumn Header="Total" Width="90">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <DockPanel>
+                                    <TextBlock Text="{Binding Amount, StringFormat='C', ConverterCulture=pt-BR}"
+                                            Style="{StaticResource TextBlockCellNumber}"/>
+                                </DockPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="625">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <ListView ItemsSource="{Binding Items}"
@@ -167,30 +125,15 @@
                                                 <Label Content="{Binding Value.Size}"
                                                        Style="{StaticResource LabelCell}"
                                                        HorizontalContentAlignment="Right"
-                                                       Width="42" IsTabStop="False"/>
+                                                       Width="42"/>
                                                 <Label Content=":"
                                                        Style="{StaticResource LabelCell}"
                                                        HorizontalContentAlignment="Right"
-                                                       Margin="-8,-1,0,0" IsTabStop="False"/>
-                                                <TextBox Text="{Binding Value.Quantity}"
-                                                         IsTabStop="True"
-                                                         Width="30"
-                                                         util:FocusExtension.IsFocused="{Binding IsFocused}"
-                                                         Visibility="{Binding Value.VisibilityTextBoxQuantity}">
-                                                    <i:Interaction.Triggers>
-                                                        <i:EventTrigger EventName="GotFocus">
-                                                            <i:InvokeCommandAction Command="{Binding OnGotFocus}"/>
-                                                        </i:EventTrigger>
-                                                        <i:EventTrigger EventName="LostFocus">
-                                                            <i:InvokeCommandAction Command="{Binding OnLostFocus}"/>
-                                                        </i:EventTrigger>
-                                                    </i:Interaction.Triggers>
-                                                </TextBox>
+                                                       Margin="-8,-1,0,0"/>
                                                 <Label Content="{Binding Value.Quantity}"
                                                        Width="30"
-                                                       Visibility="{Binding Value.VisibilityTextBlockQuantity}"
                                                        BorderBrush="Gray"
-                                                       BorderThickness="1" IsTabStop="False"/>
+                                                       BorderThickness="1"/>
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
@@ -207,7 +150,7 @@
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate>
-                                        <Expander IsExpanded="{Binding Items[0].IsExpanded}" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom">
+                                        <Expander IsExpanded="False" VerticalAlignment="Bottom" VerticalContentAlignment="Bottom">
                                             <!-- Header Panel of the Expander control -->
                                             <Expander.Header>
                                                 <StackPanel Orientation="Horizontal">
