--- a/PortalDoFranqueadoGUI/View/ManagerCollectionPurchases.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerCollectionPurchases.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.CollectionPurchases"
+﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.ManagerCollectionPurchases"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              xmlns:viewmodel="clr-namespace:PortalDoFranqueadoGUI.ViewModel"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:util="clr-namespace:PortalDoFranqueadoGUI.Util"
-             d:DataContext="{d:DesignInstance Type=viewmodel:CollectionPurchasesViewModel}"
+             d:DataContext="{d:DesignInstance Type=viewmodel:ManagerCollectionPurchasesViewModel}"
              xmlns:local="clr-namespace:PortalDoFranqueadoGUI.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
