--- a/PortalDoFranqueadoGUI/App.xaml
+++ b/PortalDoFranqueadoGUI/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="PortalDoFranqueadoGUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="View/MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml"
+             Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary Source="MainResource.xaml"/>
     </Application.Resources>
