--- a/PortalDoFranqueadoGUI/MainResource.xaml
+++ b/PortalDoFranqueadoGUI/MainResource.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:repository="clr-namespace:PortalDoFranqueadoGUI.Repository"
-                    xmlns:util="clr-namespace:PortalDoFranqueadoGUI.Util">
+                    xmlns:converter="clr-namespace:PortalDoFranqueadoGUI.Util.Converter">
     <repository:LocalRepository x:Key="Cache"/>
-    <util:EnumConverter x:Key="EnumConverter"/>
-    <util:PurchaseItemGroupDescriptionConverter x:Key="PurchaseItemGroupDescriptionConverter"/>
-    <util:ExpandableConverter x:Key="ExpandableConverter"/>
-    <util:ReverseBooleanConverter x:Key="ReverseBooleanConverter"/>
+    <converter:EnumConverter x:Key="EnumConverter"/>
+    <converter:PurchaseItemGroupDescriptionConverter x:Key="PurchaseItemGroupDescriptionConverter"/>
+    <converter:ExpandableConverter x:Key="ExpandableConverter"/>
+    <converter:ReverseBooleanConverter x:Key="ReverseBooleanConverter"/>
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Style.xaml"/>
     </ResourceDictionary.MergedDictionaries>
