--- a/PortalDoFranqueadoGUI/MainResource.xaml
+++ b/PortalDoFranqueadoGUI/MainResource.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:repository="clr-namespace:PortalDoFranqueado.Repository"
                     xmlns:converter="clr-namespace:PortalDoFranqueado.Util.Converter">
-    <repository:LocalRepository x:Key="Cache"/>
+    <repository:TemporaryLocalRepository x:Key="TempCache"/>
+    <repository:PersistentLocalRepository x:Key="PersistCache"/>
     <converter:EnumConverter x:Key="EnumConverter"/>
     <converter:PurchaseItemGroupDescriptionConverter x:Key="PurchaseItemGroupDescriptionConverter"/>
     <converter:ExpandableConverter x:Key="ExpandableConverter"/>
