--- a/PortalDoFranqueadoGUI/View/ManagerUsers.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerUsers.xaml
@@ -134,7 +134,7 @@
                                         <ComboBox.ItemsSource>
                                             <CompositeCollection>
                                                 <model:Store Id="0" Name="&lt;Selecione>"/>
-                                                <CollectionContainer Collection="{Binding Stores, Source={StaticResource Cache}}" />
+                                                <CollectionContainer Collection="{Binding Stores, Source={StaticResource TempCache}}" />
                                             </CompositeCollection>
                                         </ComboBox.ItemsSource>
                                     </ComboBox>
