--- a/PortalDoFranqueadoGUI/View/ManagerCollectionPurchase.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerCollectionPurchase.xaml
@@ -74,7 +74,7 @@
         <ListView Grid.Row="2"
                   ItemsSource="{Binding Products}"
                   SelectionMode="Single"
-                  Width="1000"
+                  Width="1085"
                   HorizontalAlignment="Left"
                   Style="{StaticResource ListViewUnfocusable}"
                   IsEnabled="{Binding EnabledContent}">
@@ -93,6 +93,14 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Product.Family.Name}"
+                                            Style="{StaticResource TextBlockCell}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Fornecedor" Width="80">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Product.Supplier.Name}"
                                             Style="{StaticResource TextBlockCell}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
