--- a/PortalDoFranqueadoGUI/Style.xaml
+++ b/PortalDoFranqueadoGUI/Style.xaml
@@ -117,6 +117,13 @@
         <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
 
+    <Style TargetType="CheckBox">
+        <Setter Property="FontFamily" Value="Open Sans"/>
+    </Style>
+    <Style TargetType="CheckBox" x:Key="CheckBoxCell" BasedOn="{StaticResource {x:Type CheckBox}}">
+        <Setter Property="Foreground" Value="Black"/>
+    </Style>
+
     <Style TargetType="TextBox">
         <Setter Property="FontFamily" Value="Open Sans"/>
         <Setter Property="Foreground" Value="Black"/>
