Change cadastre functions to do not need empty row to add new record.

--- a/PortalDoFranqueadoGUI/View/ManagerSuppliers.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerSuppliers.xaml
@@ -27,7 +27,10 @@
                FontWeight="Bold"/>
         <StackPanel Orientation="Horizontal"
                     Grid.Row="1">
-            <Button Content="{Binding StartEditAction}"
+            <Button Content="Novo"
+                    Style="{StaticResource CellButton}"
+                    Command="{Binding NewRecordCommand}"/>
+            <Button Content="Editar"
                     IsEnabled="{Binding EnabledSatartEdit}"
                     Style="{StaticResource CellButton}"
                     Command="{Binding SelectedSupplier.StartEditCommand}"/>
@@ -38,7 +41,7 @@
             <Button Content="Cancelar"
                     IsEnabled="{Binding IsEditing}"
                     Style="{StaticResource CellButton}"
-                    Command="{Binding SelectedSupplier.CancelEditCommand}"/>
+                    Command="{Binding CancelEditCommand}"/>
             <Button Content="Excluir"
                     IsEnabled="{Binding EnabledDelete}"
                     Style="{StaticResource CellButton}"
